<resources>
    <string name="app_name">Movies Clean Architecture</string>
    <string name="logotype">Logotype</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>

    <string name="welcome">Welcome!</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="movie_poster">Movie poster</string>
    <string name="want">Want</string>
    <string name="watched">Watched</string>
    <string name="selections">Selections</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="trending_error_message">Error while receiving latest releases(</string>
    <string name="trending_error_icon">Trending error icon</string>
    <string name="recent">Recent</string>
    <string name="names">Names</string>
    <string name="movies_actors">Movies, Actors …</string>
    <string name="person_photo">Person photo</string>
    <string name="search_result_poster">Search result poster</string>
    <string name="no_results_found">No results found</string>
    <string name="play_button">Play button</string>
    <string name="imdb">IMDb</string>
    <string name="show_full_text">Show full overview</string>
    <string name="cast">Cast</string>
    <string name="genres">Genres</string>
    <string name="more_like_this">More like this</string>
    <string name="similar_movie_poster">Similar movie poster</string>
    <string name="favorite_button">Favorite button</string>
    <string name="known_for">Known for</string>
    <string name="person_error_message">Sorry, we can not load info\n about this person(</string>
    <string name="share">Share</string>
    <string name="movie_details_error_message">Sorry, we could not load any info\n about this movie(</string>
    <string name="my_movies">My Movies</string>
    <string name="people">People</string>
    <string name="filter">filter content</string>
    <string name="reverse">Reverse list</string>
    <string name="change_list_view">Change list view</string>
    <string name="change_name">Change name</string>
    <string name="change_password">Change password</string>
    <string name="movie_releases">Movie Releases</string>
    <string name="movie_releases_message">We will let you know when the movies you\'ve bookmarked will be released</string>
    <string name="about_help"><![CDATA[About & Help]]></string>
    <string name="log_out">Log Out</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="star_icon">Star icon</string>
    <string name="sort_watched_movies_by">Sort Watched Movies By</string>
    <string name="sorted_by">Sorted by %1$s</string>
    <string name="persons_counter">%1$d Persons</string>
    <string name="movies_counter">%1$d Movies</string>
    <string name="option_is_checked">Option is checked</string>
    <string name="empty_movie_message">You have not added any movies yet</string>
    <string name="selection_image">Selection image</string>
</resources>