<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/karla_bold"
                android:text="@string/my_movies"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_15sdp"
                android:scaleType="centerCrop"
                android:transitionName="userImage"
                app:civ_border="false"
                app:civ_circle_color="@android:color/transparent"
                tools:src="@drawable/ic_profile" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/profileTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            app:tabGravity="fill"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@color/Salmon"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/MyCustomTextAppearance"
            app:tabTextColor="@color/DimGray"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/want" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watched" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvContentCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/LightGray"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="46 Movies" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSortedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DimGray"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@+id/tvContentCounter"
            app:layout_constraintTop_toBottomOf="@+id/tvContentCounter"
            tools:text="Sorted by My Rating" />

        <ImageView
            android:id="@+id/ivFilterList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/tvSortedBy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvContentCounter"
            app:tint="@color/DimGray" />

        <ImageView
            android:id="@+id/ivReverseList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/reverse"
            android:src="@drawable/ic_list_order"
            app:layout_constraintBottom_toBottomOf="@+id/ivFilterList"
            app:layout_constraintEnd_toStartOf="@+id/ivFilterList"
            app:layout_constraintTop_toTopOf="@+id/ivFilterList" />

        <ImageView
            android:id="@+id/ivChangeListShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:contentDescription="@string/change_list_view"
            app:layout_constraintBottom_toBottomOf="@+id/ivReverseList"
            app:layout_constraintEnd_toStartOf="@+id/ivReverseList"
            app:layout_constraintTop_toTopOf="@+id/ivReverseList"
            app:tint="@color/DimGray"
            tools:src="@drawable/ic_list_medium" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpProfilePager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSortedBy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>