<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlack">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:transitionName="userSettingImage"
        app:civ_border="false"
        app:civ_circle_color="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sample_person" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@null"
        android:enabled="false"
        android:fontFamily="@font/sf_pro_medium"
        android:imeOptions="actionDone"
        android:inputType="textPersonName|textCapSentences"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/ivProfileImage"
        app:layout_constraintStart_toStartOf="@+id/ivProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage"
        tools:text="Maria Schneider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChangeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:alpha="0.5"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/change_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/etUserName"
        app:layout_constraintStart_toStartOf="@+id/etUserName"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <ImageView
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/tvChangePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvChangePassword"
        app:tint="@color/DimGray"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/movie_releases"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchReleases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:checked="true"
        android:theme="@style/CustomSwitch"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialTextView6"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:alpha="0.5"
        android:fontFamily="@font/sf_pro_regular"
        android:text="@string/movie_releases_message"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/switchReleases"
        app:layout_constraintStart_toStartOf="@+id/materialTextView6"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

    <ImageView
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/tvAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAbout"
        app:tint="@color/DimGray"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAbout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/about_help"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/karla_bold"
        android:text="@string/log_out"
        android:textColor="@color/Salmon"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>