<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/karla_bold"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSearchView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColorHint="@color/DimGray"
            app:endIconDrawable="@drawable/ic_close"
            app:endIconMode="clear_text"
            app:endIconTint="@color/DimGray"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/DimGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieSearchView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/DarkLateGray"
                android:fontFamily="@font/sf_pro_regular"
                android:hint="@string/movies_actors"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:padding="0dp"
                android:textColor="@color/white"
                android:textColorHint="@color/LightGray"
                android:textCursorDrawable="@drawable/custom_cursor"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMoviesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/movies"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMoviesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMoviesLabel"
            tools:listitem="@layout/item_movie_search"
            tools:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPersonsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/names"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvMoviesList"
            tools:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPersonsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPersonsLabel"
            tools:listitem="@layout/item_person"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>