<?xml version="1.0" encoding="utf-8"?>
<com.apachat.swipereveallayout.core.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRevealLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:dragEdge="right"
    app:mode="same_level">

    <FrameLayout
        android:id="@+id/layoutDelete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/Tomato">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/sample" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:background="#50000000"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="@+id/ivMoviePoster"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviePoster">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_3sdp"
                android:contentDescription="@string/star_icon"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvMovieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_regular"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                tools:text="10" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:fontFamily="@font/sf_pro_regular"
            android:maxWidth="@dimen/_120sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toTopOf="@+id/ivMoviePoster"
            tools:text="A Girl Walks Home Alone at Night" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMovieReleaseYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:alpha="0.5"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toStartOf="@+id/tvMovieTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
            tools:text="2015" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMovieCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:alpha="0.5"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@+id/tvMovieReleaseYear"
            app:layout_constraintTop_toTopOf="@+id/tvMovieReleaseYear"
            tools:text="USA" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMovieRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:alpha="0.5"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@+id/tvMovieCountry"
            app:layout_constraintTop_toTopOf="@+id/tvMovieReleaseYear"
            tools:text="1h 41min" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.apachat.swipereveallayout.core.SwipeLayout>